# for-mygirl

./: .dockerignore  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml
third/: .env.docker.mock  .env.docker.real.example  .env.example  .env.local.docker.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  api.py  codex.md  demo.py  langgraph.json  pyproject.toml  requirements.txt  worker.py
third/Prompt/: __init__.py  finagent.yaml  workflowagent.yaml
third/Tool/: __init__.py  feishu_client.py  feishu_table_resolver.py  field_context.py  mock_repository.py  tool_ChangeFeishuBitableFields.py  tool_CreateFeishuBitableRecord.py  tool_DeleteFeishuBitableRecord.py  tool_ReadFeishuBitable.py  tool_ReadFeishuBitableSchema.py  tool_UpdateFeishuBitableRecord.py  write_support.py
third/agents/: __init__.py  graph.py  state.py
third/debug/: __init__.py  page.py  router.py
third/docs/: router-read00.md  two-架构图.md  workflow-db-er.md  workflowagent-fixed-graph.md  workflowagent-graph.md  外部调用契约.md  总架构图.md  能力更改方式.md
third/migrations/: env.py
third/news_focus/: README.md  __init__.py  catalog.py  service.py
third/runtime/: __init__.py  factory.py  redis_runtime.py
third/scripts/: __init__.py  probe_llm_routes.py  seed_runagent_prompts.py  smoke_feishu_tools.py
third/storage/: __init__.py  database.py  factory.py  models.py  repository.py
third/tests/: test_batch_create_workflow.py  test_business_agent_llm.py  test_database_boundary.py  test_feishu_table_resolver.py  test_json_serialization.py  test_llm_routes.py  test_v1_api.py  (+9 more)
(+316 files in other folders)
