[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "for-mygirl-third-service"
version = "0.1.0"
description = "Workflow agent and tools for the third-party service module."
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "httpx>=0.27.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "redis>=5.0.0",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
    "alembic>=1.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "Tool*", "Prompt*", "workflow*", "storage*", "runtime*", "debug*"]

[tool.setuptools.package-data]
Prompt = ["*.yaml"]
